tests/test_files_pa3/SemanticErrors/invalidBigInt.ic
class A {
	
	static void main(string[] args) { }
	
	int[] b;
	
	int bigInt() {
	
		
		while (2147483647 != 0) { }
		while (2147483648 != 0) { }
	

		return 1;
		
	}

}